--- a/projects/storefront/src/app/core/components/header/header.component.scss
+++ b/projects/storefront/src/app/core/components/header/header.component.scss
@@ -91,7 +91,7 @@
   }
 
   .material-icons {
-    font-size: 24px; // Standard icon size
+    font-size: 20px; // Reduced icon size
     vertical-align: middle;
   }
 }
@@ -179,7 +179,7 @@
     flex-grow: 1; /* Allow it to take up available space */
 
     .action-icon .material-icons {
-      font-size: 18px;
+      font-size: 14px; // Further reduced mobile icon size
     }
 
     .user-actions {
