Adjust filter menu size for mobile view

--- a/projects/storefront/src/app/cart/cart-page/cart-page.component.html
+++ b/projects/storefront/src/app/cart/cart-page/cart-page.component.html
@@ -74,7 +74,7 @@
           <input type="text" id="promo" placeholder="Enter code">
           <button>Apply</button>
         </div>
-        <button class="checkout-btn" (click)="proceedToCheckout()">Proceed to Checkout</button>
+        <button class="checkout-btn bordered-button" (click)="proceedToCheckout()">Proceed to Checkout</button>
       </aside>
     </div>
   </ng-container>
